--- a/.github/workflows/test-pipeline.yaml
+++ b/.github/workflows/test-pipeline.yaml
@@ -2,6 +2,11 @@ name: My Pipeline
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+    - test
+    types:
+      closed   
 
 jobs:
   my_job:
